Update with Shahil's name and GitHub links

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,8 +87,8 @@
         </main>
 
         <footer>
-            <p>Created by <a href="https://github.com/yourusername" target="_blank">Your Name</a> | 
-               <a href="https://github.com/yourusername/PlaylistTimeCalculator" target="_blank">
+            <p>Created by <a href="https://github.com/shahil2911" target="_blank">Shahil</a> | 
+               <a href="https://github.com/shahil2911/playlist-time-calculator" target="_blank">
                    <i class="fab fa-github"></i> Source
                </a>
             </p>
