--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Playlist Time Calculator</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}?v={{ range(1, 10000) | random }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/pattern.css') }}?v={{ range(1, 10000) | random }}">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="icon" href="https://www.youtube.com/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -38,7 +41,7 @@
                 </form>
             </div>
 
-            <div id="loading" class="hidden">
+            <div id="loading" style="display: none;" class="hidden">
                 <div class="spinner"></div>
                 <p>Calculating playlist duration...</p>
             </div>
@@ -78,6 +81,7 @@
                         <span id="unavailable-count"></span> videos in this playlist are unavailable and not included in the calculation.
                     </p>
                 </div>
+                
             </div>
 
             <div id="error" class="hidden">
